--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A collaborative pixel art canvas celebrating Sri Lankan heritage",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
